// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text 1`] = `
<text
  class="silky-text "
  transform=" "
>
  foo
</text>
`;

exports[`Text width transform rotate 1`] = `
<text
  class="silky-text "
  transform=" rotate(10 20, 30)"
>
  foo
</text>
`;

exports[`Text width transform translate 1`] = `
<text
  class="silky-text "
  transform="translate(10, 10) "
>
  foo
</text>
`;

exports[`Text width transform translate and rotate 1`] = `
<text
  class="silky-text "
  transform="translate(10, 10) rotate(90)"
>
  foo
</text>
`;

exports[`Text with Emotion 1`] = `
.emotion-0 {
  fill: black;
}

<text
  class="silky-text emotion-0"
  transform=" "
>
  foo
</text>
`;

exports[`Text with custom class 1`] = `
<text
  class="silky-text foo"
  transform=" "
>
  foo
</text>
`;

exports[`Text with horizontal and vertical text shift 1`] = `
<text
  class="silky-text "
  dx="10"
  dy="10"
  transform=" "
>
  foo
</text>
`;

exports[`Text with lengthAdjust:spacing 1`] = `
<text
  class="silky-text "
  lengthAdjust="spacing"
  transform=" "
>
  foo
</text>
`;

exports[`Text with lengthAdjust:spacingAndGlyphs 1`] = `
<text
  class="silky-text "
  lengthAdjust="spacingAndGlyphs"
  transform=" "
>
  foo
</text>
`;

exports[`Text with textLength 1`] = `
<text
  class="silky-text "
  textLength="10%"
  transform=" "
>
  foo
</text>
`;

exports[`Text with x and y coordinates 1`] = `
<text
  class="silky-text "
  transform=" "
  x="10"
  y="10"
>
  foo
</text>
`;
